# micro-videos

./: .pylintrc  Dockerfile  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.docker/: .p10k.zsh
.docker/zsh/history/: .zsh_history
src/__seedwork/domain/: entities.py  exceptions.py  value_objects.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_value_objects.py
src/category/domain/: entities.py
src/category/tests/domain/: test_entities.py
src/category/tests/unit/domain/: test_unit_entities.py
