[tool.pdm]

[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Thyago Alves Santiago", email = "thyagoasantiago@gmail.com"},
]
dependencies = [
    "autopep8>=2.0.1",
]
requires-python = ">=3.10.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
