[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.2",
    "pylint>=2.16.3",
]

[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Thyago Alves Santiago", email = "thyagoasantiago@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.10.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
